# RobotML-SDK

./: .gitignore  README.md
documents/: ErreurValidationLibrairie.tiff  pegase-N0.docx
features/org.eclipse.papyrus.robotml.dynamicValidation.feature/: build.properties
features/org.eclipse.papyrus.robotml.extension.dev.feature/: .project
features/org.eclipse.papyrus.robotml.extension.feature/: feature.xml
features/org.eclipse.papyrus.xtext.AthenaDSL.feature/: .project  feature.xml
installer/linux/ubuntu-12.04/: README
plugins/: README.md
robotml-kepler/: README.md
tests/models/researchCamp_cyril/aroccam-generated-files/: CMakeLists.txt  LICENSE.txt  README.txt  RobotMLModelApplication.awp
tests/models/researchCamp_cyril/aroccam-generated-files/src/RobotMLModelApplication/: RobotMLModelApplication.cpp  RobotMLModelApplication.hpp
tests/models/researchCamp_cyril/aroccam-generated-files/src/RobotMLModelApplication/Datatypes/: DataType.hpp  Odo_Tics_LR.hpp  ProxyMeasurements.hpp  SpeedTics.hpp  Velocity_Tics_LR.hpp  Zone.hpp  all.hpp
tests/models/researchCamp_cyril/aroccam-generated-files/src/RobotMLModelApplication/Software/Perception/: Perception.cpp  Perception.hpp
tests/models/researchCamp_cyril/aroccam-generated-files/src/RobotMLModelApplication/Software/Pilote/: Pilote.cpp  Pilote.hpp
update-sites/org.eclipse.papyrus.robotml.dynamicValidation.update/: site.xml
update-sites/org.eclipse.papyrus.robotml.extension.dev.update/: .project
update-sites/org.eclipse.papyrus.robotml.generators.orocos.updateSite/: .project  site.xml
(+4088 files in other folders)
